fully implemented villager quests